<resources>
    <string name="app_name">Elastos Hive</string>

    <string name="nav_header_title">Elastos Hive</string>
    <string name="nav_header_subtitle">https://www.elastos.org</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="internalstorage">Internal storage</string>
    <string name="onedrive">OneDrive</string>
    <string name="ipfs">IPFS</string>

    <string name="communicate">Communicate</string>
    <string name="tools">Tools</string>
    <string name="addfriend">Add Friend</string>
    <string name="personal_infomation">Personal information</string>
    <string name="myfriends">My Friends</string>
    <string name="configuration">Configuration</string>
    <string name="settings">Settings</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="pressagain">Press again to exit</string>

    <string name="create_new_dir">Create new directory</string>
    <string name="create_new_dir_content">Please input directory name</string>
    <string name="directory">directory</string>

    <string name="create_new_file">Create new file</string>
    <string name="create_new_file_content">Please input file name</string>
    <string name="file">file</string>

    <string name="wait">Please wait...</string>
    <string name="loading">Loading...</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="warning">Warning</string>
    <string name="name">Name</string>
    <string name="detail">Detail</string>

    <string name="home">Home</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="rename">Rename</string>
    <string name="paste">Paste</string>

    <string name="prompt">Prompt</string>

    <string name="confirm_delete">Confirm deleting this file</string>

    <string name="input_new_file_name">Please input new file name</string>

    <string name="warning_same_file_name">Warning: a file or folder with the same name has been detected</string>

    <string name="connect_error">Error:Network connection is abnormal, please contact administrator</string>

    <string name="carrier_ready">Carrier is ready!</string>
</resources>
