<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_internalstorage"
            android:title="@string/internalstorage" />
        <item
            android:id="@+id/nav_onedrive"
            android:title="@string/onedrive" />
        <item
            android:id="@+id/nav_ipfs"
            android:title="@string/ipfs" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_personal_info"
                android:title="@string/personal_infomation" />
            <item
                android:id="@+id/nav_addfriend"
                android:title="@string/addfriend" />
            <item
                android:id="@+id/nav_myfriends"
                android:title="@string/myfriends" />
        </menu>
    </item>
    <item android:title="@string/configuration">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>
