<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_pop_menu_internalstorage_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_pop_menu_internalstorage_move"
        android:orderInCategory="100"
        android:title="@string/cut"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_pop_menu_internalstorage_copy"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_pop_menu_internalstorage_rename"
        android:orderInCategory="100"
        android:title="@string/rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_pop_menu_internalstorage_more"
        android:orderInCategory="100"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>
